fix: add z-index to menu-list

--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 5;
 }
 
 .menu__item {
